--- a/app/src/main/res/layout/fragment_fragment2.xml
+++ b/app/src/main/res/layout/fragment_fragment2.xml
@@ -12,7 +12,41 @@
         android:layout_height="wrap_content"
         android:text="Fragment 2"
         android:textSize="30dp"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:textStyle="bold"
         android:textColor="@color/black"/>
+
+
+    <TextView
+        android:id="@+id/dataFrom1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
+        android:textColor="@color/black"
+        android:textSize="26dp"/>
+
+    <EditText
+        android:id="@+id/fragment2Data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="300dp"
+        android:layout_marginHorizontal="26dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Data to Fragment 1" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/sendData2btn"
+        android:text="Send Data to Fragment 1"
+        android:backgroundTint="@color/black"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/fragment2Data"
+        android:layout_marginTop="20dp"/>
 
 </RelativeLayout>
